infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo #the official image takes from dockerHub
---
# service config
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec: # tells to service how to behave
  selector:
    # tells to service how to find the set of pods. Should match with template=>metadata=>labels=>app
    app: auth-mongo
  # may not specify due to default value will be ClusterIP
  type: ClusterIP
  ports:
    - name: db
      protocol: TCP
      port: 27017 # default port for mongo db
      targetPort: 27017
